--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,6 +1,5 @@
 - name: PING
   hosts: Web
   tasks:
-  - name:ping the server
-    ansible.builtin.ping:
-    msg: "Hello world"
+    - name: Ping the server
+      ansible.builtin.ping:
