--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -3,3 +3,8 @@
   tasks:
     - name: Ping the server
       ansible.builtin.ping:
+      
+    - name: Start service httpd, if not started
+      ansible.builtin.service:
+      name: httpd
+      state: started
