--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -3,8 +3,22 @@
   tasks:
     - name: Ping the server
       ansible.builtin.ping:
-      
-    - name: Start service httpd, if not started
+
+    # - name: Start service httpd, if not started
+    #   ansible.builtin.service:
+    #   name: httpd
+    #   state: started
+- name: Install and Start Apache
+  hosts: Web
+  become: yes
+  tasks:
+    - name: Install Apache
+      yum:
+        name: httpd
+        state: present
+
+    - name: Start Apache service
       ansible.builtin.service:
-      name: httpd
-      state: started
+        name: httpd
+        state: started
+        enabled: yes
