--- a/03-ngnix.yaml
+++ b/03-ngnix.yaml
@@ -3,7 +3,7 @@
   become: yes # -b become root access, like sudo
   tasks:
   - name: Install ngnix
-    ansible.builtin.packges:
+    ansible.builtin.package:
       name: ngnix
       state: present
       enabled: yes
