--- a/03-ngnix.yaml
+++ b/03-ngnix.yaml
@@ -2,8 +2,14 @@
   hosts: Web
   become: yes # -b become root access, like sudo
   tasks:
-  - name: Install ngnix
-    ansible.builtin.package:
-      name: ngnix
-      state: present
-      enabled: yes
+    - name: Install Nginx
+      ansible.builtin.dnf:
+        name: nginx
+        state: present
+        update_cache: yes
+
+    - name: Start and Enable Nginx Service
+      ansible.builtin.service:
+        name: nginx
+        state: started
+        enabled: yes
