--- a/03-ngnix.yaml
+++ b/03-ngnix.yaml
@@ -13,3 +13,12 @@
         name: nginx
         state: started
         enabled: yes # updates the status and enbling it
+
+    - name: start the ngnix service
+      ansible.builtin.service:
+        name: ngnix
+        state: restarted
+    - name: Reload service httpd, in all cases
+      ansible.builtin.service:
+        name: httpd
+        state: reloaded 
