--- a/03-ngnix.yaml
+++ b/03-ngnix.yaml
@@ -1,13 +1,7 @@
 - name: Install and Run Nginx
   hosts: Web
-  become: yes # Root access (like sudo)
+  become: yes
   tasks:
-    - name: Stop Apache if running (to prevent conflicts)
-      ansible.builtin.service:
-        name: httpd
-        state: stopped
-      ignore_errors: yes
-
     - name: Install Nginx
       ansible.builtin.dnf:
         name: nginx
@@ -19,3 +13,4 @@
         name: nginx
         state: started
         enabled: yes
+
