--- a/05-vars.yaml
+++ b/05-vars.yaml
@@ -1,6 +1,6 @@
 - name: variables
   hosts: local
-  connections: local
+  connection: local
   vars:
     COURSES: "Devops with AWS"
     DURATION: 120HRS
