--- a/05-vars.yaml
+++ b/05-vars.yaml
@@ -9,3 +9,9 @@
   - name: Print the variables
     ansible.builtin.debug:
       msg: "Course is {{ COURSES }}, Duration is {{ DURATION }}, Trainer is {{ TRAINER }}"
+
+  - name: Print the variables
+    vars: # task level variables
+      COURSE: Ansible
+    ansible.builtin.debug:
+      msg: "Course is {{ COURSES }}, Duration is {{ DURATION }}, Trainer is {{ TRAINER }}"
