--- a/05-vars.yaml
+++ b/05-vars.yaml
@@ -8,7 +8,7 @@
 
   - name: Print the variables
     vars: # task level variables
-      COURSE: Ansible
+      COURSES: Ansible
     ansible.builtin.debug:
       msg: "Course is {{ COURSES }}, Duration is {{ DURATION }}, Trainer is {{ TRAINER }}"
     
