--- a/14-conditions.yaml
+++ b/14-conditions.yaml
@@ -1,16 +1,16 @@
 - name: check value is greater than 10 or not
-  hosts: local
+  hosts: localhost
   connection: local
   vars:
     my_number: 15
   tasks:
   - name: print if number greater than 10
-    anisible.builtin.debug:
-      msg: "Given number {{ My_number }} is greater than 10"
+    ansible.builtin.debug:
+      msg: "Given number {{ my_number }} is greater than 10"
     when: my_number >10
 
   - name: print if number less than or equal to 10
     anisible.builtin.debug:
-      msg: "Given number {{ My_number }} is less than or equal to 10"
+      msg: "Given number {{ my_number }} is less than or equal to 10"
     when: my_number <=10
      
