loops for ansible

--- a/18-loops.yaml
+++ b/18-loops.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
     - name: Install packages
-      ansible.builtin.packages:
+      community.general.packages:
         name: "{{ item }}"
         state: Installed
       loop:
