--- a/inventory.ini
+++ b/inventory.ini
@@ -6,3 +6,7 @@
 172.31.34.145
 172.31.47.114
 
+[servers]
+172.31.47.114 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh/my_new_key.pem
+172.31.34.145 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh/my_new_key.pem
+
