--- a/inventory.ini
+++ b/inventory.ini
@@ -10,6 +10,13 @@
 172.31.47.114 ansible_user=ec2-user ansible_ssh_private_key_file=C:/Users/narsi/.ssh/my_new_key.pem
 172.31.34.145 ansible_user=ec2-user ansible_ssh_private_key_file=C:/Users/narsi/.ssh/my_new_key.pem
 
+[local]
+127.0.0.1
+
+[web_servers]
+172.31.47.114
+172.31.34.145
+
 
 
 
