--- a/inventory.ini
+++ b/inventory.ini
@@ -12,3 +12,6 @@
 
 
 
+[servers]
+172.31.47.114 ansible_user=ec2-user ansible_ssh_private_key_file=/mnt/c/Users/narsi/.ssh/my_new_key.pem
+172.31.34.145 ansible_user=ec2-user ansible_ssh_private_key_file=/mnt/c/Users/narsi/.ssh/my_new_key.pem
