--- a/inventory.ini
+++ b/inventory.ini
@@ -6,7 +6,7 @@
 184.72.168.55
 
 [servers]
-34.226.216.142 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh/my_new_key.pem
+34.226.216.142 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh
 
-184.72.168.55 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh/my_new_key.pem
+184.72.168.55 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh
 
