--- a/18-loops.yaml
+++ b/18-loops.yaml
@@ -1,5 +1,7 @@
 - name: Install Packages
-  hosts: web_servers
+  hosts:
+  - web_servers
+  - servers
   become: yes
   tasks:
     - name: Install required packages
