--- a/inventory.ini
+++ b/inventory.ini
@@ -1,14 +1,7 @@
-[local]
-# 127.0.0.1
-
 [web_servers]
 34.226.216.142
 184.72.168.55
 
 [servers]
-34.226.216.142 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh/my_new_key.pem.pub
-
-184.72.168.55 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh/my_new_key.pem.pub
-
-184.72.168.55 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh
-34.226.216.142 ansible_user=ec2-user ansible_ssh_private_key_file=/c/Users/narsi/.ssh
+34.226.216.142 ansible_user=ec2-user ansible_ssh_private_key_file=/C/Users/narsi/.ssh/my_new_key.pem
+184.72.168.55 ansible_user=ec2-user ansible_ssh_private_key_file=/C/Users/narsi/.ssh/my_new_key.pem
