--- a/20-filters.yaml
+++ b/20-filters.yaml
@@ -1,6 +1,6 @@
 - name: filters
-  hosts: local
-  connection: local
+  hosts: web_servers
+  connection: web_servers
   tasks:
   - name: handle undefine variable
     ansible.builtin.debug:
